Bug 506511 Sidebar search string is corrupt by incorrect escaping and unescaping r=IanN